[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "pyside-app-core"
description = "Framework for PySide6 Applications"
readme = "README.md"
authors = [
    { name = "Leo Covarrubias", email = "leo@leocov.com" },
]
license-files = { paths = ["LICENSE"] }
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Desktop Environment",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["pyside", "pyside6", "qt", "qt6", "framework"]
requires-python = ">=3.12"
dependencies = [
    "pyside6==6.7.*",
    "jinja2==3.*",
    "hatchling",
    "loguru",
    "typing-extensions",
]
dynamic = ["version"]

[project.urls]
"Source" = "https://github.com/leocov-dev/pyside-app-core"
"Issues" = "https://github.com/leocov-dev/pyside-app-core/issues"
"Releases" = "https://github.com/leocov-dev/pyside-app-core/releases"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pyside_app_core/_version.py"

[tool.hatch.build.targets.wheel]
packages = [
    "src/pyside_app_core",
    "src/pyside_app_build",
]

[project.entry-points.hatch]
pyside-app = "pyside_app_build.hooks"

# default ---------------------------------------------------------------
[tool.hatch.envs.default]
type = "virtual"
path = ".venv"

[tool.hatch.envs.default.scripts]
build-example = "cd {root}/examples/toolbar-app-project && hatch env remove hatch-build && hatch build -t pyside-app"
run-example = "cd {root}/examples/toolbar-app-project && hatch run toolbar-app"

# testing ----------------------------------------
[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "pytest-qt",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = [ "3.12" ]


# format/linting ---------------------------------------------------------------
[tool.hatch.envs.hatch-static-analysis]
dev-mode = true
skip-install = false
extra-dependencies = [
    "pyside6==6.7.*",
    "jinja2==3.*",
    "mypy>=1.10",
    "import-linter==2.*",
]

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = [
    'ruff format{env:HATCH_FMT_ARGS:} --check --diff {args:.}',
]
format-fix = [
    'ruff format{env:HATCH_FMT_ARGS:} {args:.}'
]
lint-check = [
    'mypy',
    'ruff check{env:HATCH_FMT_ARGS:} {args:.}',
    'lint-imports',
]
lint-fix = [
    'mypy',
    'ruff check{env:HATCH_FMT_ARGS:} --fix {args:.}',
    'lint-imports',
]

# ------------------------------
# testing
[tool.pytest.ini_options]
pythonpath = ["src"]

# ------------------------------
# linting
[tool.ruff.lint]
extend-ignore = [
    "EM101",
    "EM102",
    "TRY003",
    "N802",
    "FBT001",
    "PLW0603",
    "SLF001",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F401",
    "TID252",
]
"tests/*" = [
    "S101",
    "INP001",
    "FBT001",
    "PT006",
    "PLR2004",
    "SLF001",
    "PT011",
]
"src/pyside_app_build/*" = [
    "T201",
    "S607",
    "PLR2004",
]
"examples/*" = [
    "INP001",
]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
packages = [
    "pyside_app_core",
    "pyside_app_build"
]
strict = true
implicit_reexport = true

# ------------------------------
# import linter config and rules
[tool.importlinter]
root_packages = [
    "pyside_app_core",
    "pyside_app_build",
]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "core seperate from build"
type = "independence"
modules = [
    "pyside_app_core",
    "pyside_app_build",
]
ignore_imports = [
    "pyside_app_build.constants -> pyside_app_core.resources",
]

[[tool.importlinter.contracts]]
name = "Module Layering"
type = "layers"
layers = [
    "ui",
    "services",
    "mixin",
    "app",
    "validators",
    "utils",
    "errors",
    "log",
    "constants",
    "types",
    "__about__",
    "_version",
    "resources",
]
containers = ["pyside_app_core"]
exhaustive = true
ignore_imports = [
    "pyside_app_core.services.preferences_service.model -> pyside_app_core.ui.prefs"
]

[[tool.importlinter.contracts]]
name = "Widget Layering"
type = "layers"
layers = [
    "standard",
    "widgets",
]
containers = ["pyside_app_core.ui"]
