[build-system]
requires = [
    "hatchling",
    "pyside-app-core @ file://../../../",
]
build-backend = "hatchling.build"

[project]
name = "toolbar-app"
requires-python = ">=3.12"
dependencies = [
    "pyside6==6.7.*",
    "jinja2==3.*",
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/toolbar_app/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
post-install-commands = [
    "pip install -q -e {root}/../../",  # do editable install of pyside_app_core
    "hatch build --ext",
]

[tool.hatch.envs.default.scripts]
toolbar-app = "hatch run python \"src/Toolbar App.py\""

[tool.hatch.build.hooks.pyside-app]
resource-target = "src/toolbar_app"
extra-resource-roots = [
    "src/resources/tb",
]

[tool.hatch.build.targets.pyside-app]
icon = "src/resources/tb/app/icon.png"
spec-root = "src"
entrypoint = "src/Toolbar App.py"
extra-package-data = ["toolbar_app"]
